setup for compose UI rework